# excel-mcp-server

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  LICENSE  MCP_EXPANSION_SPEC.md  README.md
.kiro/settings/: mcp.json
.kiro/specs/excel-agent-app/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/excel-mcp-server/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: excel-crate-apis.md
backend/: Cargo.toml
backend/src/: agent.rs  config.rs  main.rs  mcp.rs  static_files.rs
backend/src/routes/: artifacts.rs  mod.rs  upload.rs
mcp-server/: Cargo.toml
mcp-server/src/: cell_ref.rs  lib.rs  main.rs  server.rs  store.rs
mcp-server/src/engines/: mod.rs  zavora.rs
mcp-server/src/tools/: charts.rs  common.rs  conditional.rs  expanded.rs  format.rs  images.rs  layout.rs  mod.rs  read.rs  sheets.rs  sparklines.rs  tables.rs  validation.rs  workbook.rs  write.rs
mcp-server/src/types/: enums.rs  inputs.rs  mod.rs
mcp-server/tests/: error_responses.rs  workbook_lifecycle.rs
mcp-server/web-client/: index.html
src/: cell_ref.rs  error.rs  main.rs  server.rs  store.rs
src/engines/: zavora.rs
src/tools/: charts.rs  conditional.rs  expanded.rs  format.rs  images.rs  layout.rs  mod.rs  read.rs  sheets.rs  sparklines.rs  tables.rs  validation.rs  workbook.rs  write.rs
src/types/: enums.rs  inputs.rs  responses.rs
tests/: error_responses.rs  workbook_lifecycle.rs
