[package]
name = "excel-agent-app"
version = "0.1.0"
edition = "2021"

[dependencies]
adk-agent = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-agent" }
adk-tool = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-tool" }
adk-server = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-server" }
adk-session = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-session" }
adk-model = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-model" }
adk-runner = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-runner" }
adk-core = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-core" }
adk-artifact = { path = "/Users/jameskaranja/Developer/projects/adk-rust/adk-artifact" }

axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
