[package]
name = "excel-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
zavora-xlsx = { path = "../../../zavora-xlsx" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
